--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "boxen": "^4.1.0",
     "chalk": "^2.4.2",
     "commander": "^2.20.0",
+    "cssnano": "^4.1.10",
     "file-tree-transform": "^1.0.0",
     "html-minifier": "^4.0.0",
     "mustache": "^3.0.1",
