Added a watch commend, support for modules (to import gensist).

--- a/default-config.json
+++ b/default-config.json
@@ -3,9 +3,5 @@
   "optimize": true,
   "input": "content",
   "output": "build",
-  "template": "template.html",
-  "assets": "assets",
-  "style": [
-    "theme.css"
-  ]
+  "template": "template.html"
 }
