--- a/package.json
+++ b/package.json
@@ -26,15 +26,17 @@
   "homepage": "https://github.com/KargJonas/gensist#readme",
   "dependencies": {
     "boxen": "^4.1.0",
+    "browser-sync": "^2.26.7",
     "chalk": "^2.4.2",
+    "chokidar": "^3.0.2",
     "commander": "^2.20.0",
     "cssnano": "^4.1.10",
     "file-tree-transform": "^1.0.0",
     "html-minifier": "^4.0.0",
+    "mem": ">=4.0.0",
     "mustache": "^3.0.1",
     "ncp": "^2.0.0",
     "showdown": "^1.9.0",
-    "word-wrap": "^1.2.3",
-    "mem": ">=4.0.0"
+    "word-wrap": "^1.2.3"
   }
 }
